--- a/style.css
+++ b/style.css
@@ -68,33 +68,16 @@ html{
     margin-left: 5rem;
     position: absolute;
 }
-#search{
-    width: 10%;
-    height: 10%;
+.motto{
     margin-left: 1rem;
     z-index: 1;
     position: absolute;
-    top: 11rem;
+    bottom: 5rem;
+    font-size: 1rem;
+    color: red;
 }
 
-.locate{
-    background-color: orange;
-    position: absolute;
-    top: 11rem;
-    margin-left: 7.5rem;
-    /* margin-bottom: 249px; */
-    width: 10%;
-    height: 10%;
-    color: white;
-}
-.social{
-    display: flex;
-    margin-left: 110px;
-    font-size: large;
-    font-weight: 500;
-     position: absolute;
-     padding-top: 290px;
-}
+
 .no{
     margin-left: 30px;
 }
@@ -513,9 +496,9 @@ left: 0.5rem;
     display: flex;
 }
 .dates{
-    display: flex;
+display: flex;
  position: relative;
- left: 10vw;
+ left: 2vw;
  margin-bottom: 2rem;
 }
 .dates1{
@@ -542,7 +525,7 @@ left: 0.5rem;
 
 .box5{
     width: 100%;
-    height: 60vh;
+    height: fit-content;
     background-color: rgb(239, 244, 245);
     position: relative;
     top: 2.5rem;
@@ -592,42 +575,30 @@ left: 0.5rem;
     position: relative;
     bottom: 5rem;
 }
-.c{
-    width: 0.7rem;
-    height: 0.7rem;
-    border-radius: 50%;
-    background-color: rgb(238, 172, 148);
-    margin-left: 10px;
-
-}
-.circle{
-    position: absolute;
-   right: 33%;
-   bottom: 1rem;
- 
-}
-#ci{
-    background-color: rgb(238, 73, 13);
-    width: 1rem;
-    height: 1rem;
-}
 
 .box6{
     width: 100vw;
-    height: 70vh;
+    height: fit-content;
     background-color: white;   
 }
 #final{
     display: block;
 }
 .finaltext{
-    font-size: 1.6rem;
+    text-align: center;
+    font-size: 2.2rem;
      font-weight: 700;
+     margin-left: 1rem;
 }
 #space{
   position: relative;
-  left: 5vw;
- top: 1rem;
+  left: 10vw;
+ bottom: 1em;
+}
+#spaces{
+    position: relative;
+    left: 8vw;
+  bottom: 2rem;
 }
 
 .smallcap{
@@ -641,6 +612,11 @@ left: 0.5rem;
     font-size: 1.4rem;
  position: relative;
  left: 23%;
+  }
+  .finaltexts{
+    position: relative;
+    left: 20vw;
+    text-align: center;
   }
   .no{
       color: orangered;
@@ -673,21 +649,22 @@ font-family: 'Ibarra Real Nova', serif;
   font-size: 1rem;
 }
 .sub{
-    margin-top: 4rem;
+    margin-top: 3rem;
 }
 #input{
-    width: 80%;
+    width: 50vw;
    position: relative;
-   left: 3.5rem;
+   left: 20vw;
    height: 1.8rem;
-   bottom: 1rem;
+   margin-top:1em ;
+   bottom: 0.6rem;
 }
 #submit{
     width: fit-content;
     height: fit-content;
     padding: 9px;
    position: relative;
-   left: 37vw;
+   left: 35vw;
    bottom: 0.5rem;
 }
 
